feat: change cf model from scipy.svd to surprise.svd, add README.md for description, use Git LFS for model file

--- a/modeling/notebooks/modeling_with_interaction.ipynb
+++ b/modeling/notebooks/modeling_with_interaction.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "af72e33e",
    "metadata": {},
    "outputs": [
@@ -80,9 +80,9 @@
      "text": [
       "\n",
       "사용자 평점 데이터 로딩 중...\n",
-      "평점 데이터: 909664개\n",
-      "고유 사용자 수: 1147\n",
-      "고유 영화 수: 32843\n"
+      "평점 데이터: 1104355개\n",
+      "고유 사용자 수: 1371\n",
+      "고유 영화 수: 34859\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "ba761421",
    "metadata": {},
    "outputs": [
@@ -195,77 +195,69 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>909659</th>\n",
-       "      <td>K6ExjZ4Z1xX1O</td>\n",
-       "      <td>my5Y83d</td>\n",
-       "      <td>노팅 힐</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>909660</th>\n",
-       "      <td>K6ExjZ4Z1xX1O</td>\n",
-       "      <td>mmOb3kd</td>\n",
-       "      <td>해리포터와 마법사의 돌</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>909661</th>\n",
-       "      <td>K6ExjZ4Z1xX1O</td>\n",
-       "      <td>mJ5xwgd</td>\n",
-       "      <td>매트릭스</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>909662</th>\n",
-       "      <td>K6ExjZ4Z1xX1O</td>\n",
-       "      <td>m5eQyz5</td>\n",
-       "      <td>아이언맨 2</td>\n",
+       "      <th>1104350</th>\n",
+       "      <td>8BRve2JMQ56VJ</td>\n",
+       "      <td>m45ngDW</td>\n",
+       "      <td>반지의 제왕: 왕의 귀환</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>909663</th>\n",
-       "      <td>K6ExjZ4Z1xX1O</td>\n",
-       "      <td>m85X6BO</td>\n",
-       "      <td>시라노; 연애조작단</td>\n",
-       "      <td>2.0</td>\n",
+       "      <th>1104351</th>\n",
+       "      <td>8BRve2JMQ56VJ</td>\n",
+       "      <td>mOk66kW</td>\n",
+       "      <td>브루스 올마이티</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1104352</th>\n",
+       "      <td>8BRve2JMQ56VJ</td>\n",
+       "      <td>m533Lw5</td>\n",
+       "      <td>스텝업 2 - 더 스트리트</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1104353</th>\n",
+       "      <td>8BRve2JMQ56VJ</td>\n",
+       "      <td>mWp1EmO</td>\n",
+       "      <td>은교</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1104354</th>\n",
+       "      <td>8BRve2JMQ56VJ</td>\n",
+       "      <td>mO09kVd</td>\n",
+       "      <td>러브픽션</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>909664 rows × 4 columns</p>\n",
+       "<p>1104355 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              user_id movie_id   movie_title  rating\n",
-       "0       ZBm5R0Mj7qd46  m5XKVDL         양자물리학     3.0\n",
-       "1       ZBm5R0Mj7qd46  m5Nn2GE       영화로운 작음     3.5\n",
-       "2       ZBm5R0Mj7qd46  mWvq0vZ           내 방     2.5\n",
-       "3       ZBm5R0Mj7qd46  mdKpyBk      성적표의 김민영     3.0\n",
-       "4       ZBm5R0Mj7qd46  mOopbwm  킹덤4: 대장군의 귀환     3.0\n",
-       "...               ...      ...           ...     ...\n",
-       "909659  K6ExjZ4Z1xX1O  my5Y83d          노팅 힐     3.0\n",
-       "909660  K6ExjZ4Z1xX1O  mmOb3kd  해리포터와 마법사의 돌     2.0\n",
-       "909661  K6ExjZ4Z1xX1O  mJ5xwgd          매트릭스     3.0\n",
-       "909662  K6ExjZ4Z1xX1O  m5eQyz5        아이언맨 2     4.0\n",
-       "909663  K6ExjZ4Z1xX1O  m85X6BO    시라노; 연애조작단     2.0\n",
+       "               user_id movie_id     movie_title  rating\n",
+       "0        ZBm5R0Mj7qd46  m5XKVDL           양자물리학     3.0\n",
+       "1        ZBm5R0Mj7qd46  m5Nn2GE         영화로운 작음     3.5\n",
+       "2        ZBm5R0Mj7qd46  mWvq0vZ             내 방     2.5\n",
+       "3        ZBm5R0Mj7qd46  mdKpyBk        성적표의 김민영     3.0\n",
+       "4        ZBm5R0Mj7qd46  mOopbwm    킹덤4: 대장군의 귀환     3.0\n",
+       "...                ...      ...             ...     ...\n",
+       "1104350  8BRve2JMQ56VJ  m45ngDW   반지의 제왕: 왕의 귀환     4.0\n",
+       "1104351  8BRve2JMQ56VJ  mOk66kW        브루스 올마이티     4.0\n",
+       "1104352  8BRve2JMQ56VJ  m533Lw5  스텝업 2 - 더 스트리트     4.0\n",
+       "1104353  8BRve2JMQ56VJ  mWp1EmO              은교     3.0\n",
+       "1104354  8BRve2JMQ56VJ  mO09kVd            러브픽션     4.0\n",
        "\n",
-       "[909664 rows x 4 columns]"
+       "[1104355 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_ratings"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "63bc7c88",
-   "metadata": {},
-   "source": [
-    "91만건정도가 있네"
    ]
   },
   {
